# SampleFetchContent

./: .editorconfig  CMakeLists.txt
src/: CMakeLists.txt  Vec2.cpp  Vec2.h
